# anygraph_backend

./: .gitignore  DEPLOYMENT.md  README.md  main.py  pyproject.toml  render.yaml
docker/: Dockerfile
sql/queries/chat_sessions/: delete_chat_session.sql  get_chat_session.sql  get_user_chat_sessions.sql  insert_chat_session.sql  update_chat_session.sql  verify_session_owner.sql
sql/queries/columns/: get_dataset_columns.sql  insert_column.sql
sql/queries/datasets/: delete_dataset.sql  get_dataset.sql  get_session_datasets.sql  insert_dataset.sql
sql/queries/messages/: get_messages.sql  insert_message.sql
sql/queries/stats/: get_sessions_this_month.sql  get_total_datasets.sql  get_total_queries.sql
sql/queries/users/: get_user.sql  insert_user.sql  update_user.sql
sql/schema/: create_tables.sql  drop_tables.sql
src/: ai_service.py  chat_service.py  code_executor.py  database.py  dataset_service.py  main.py  stats_service.py  user_service.py
